Fix black text on yellow background Increase text in copyright Fix landing page alignment of copyright Pull copyright text from translation files

--- a/webapp/src/main/webapp/src/assets/public/style.css
+++ b/webapp/src/main/webapp/src/assets/public/style.css
@@ -735,7 +735,7 @@ body.login #about .faq {
 body.login #footer {
   background-color: #e7e7e7;
   border-top: solid 1px #b4b4b4;
-  padding-top: 70px
+  padding-bottom: 70px
 }
 
 #footer .copyright {
